src/z80asm/z80asm2/t/30-directive/expected/undef_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/undef_01.asm
Assembling t/30-directive/input/undef_01.asm...
t/30-directive/input/undef_01.asm:1:6: error: Expected identifier after UNDEF
    undef ; no name
         ^
t/30-directive/input/undef_01.asm:2:13: error: Unexpected token after UNDEF: world
    undef hello world ; extra tokens
                ^
# file: t/30-directive/input/undef_01.asm
EndOfLine	"\n"	3:1	
